<resources>
    <string name="app_name">ImagePickerCompressor</string>
    <string name="forcefully_enable_permission">You have forcefully denied some of the required permissions for this action.\nPlease go to permissions and allow them.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="something_went_wrong">Something went wrong !!!</string>
    <string name="capture_photo">Capture Image</string>
    <string name="cannot_find_image_crop_app">Can not find Image Crop app</string>
    <string name="insufficient_memory_error">Insufficient Memory error!</string>
    <string name="capture_image">Capture Image</string>
    <string name="pick_image_from_gallery">Pick image from gallery</string>
    <string name="pick_image_from_gallery_option">Pick image from gallery Option</string>

    <string name="scoped_storage">Scope Storage</string>
    <string name="external_storage"><![CDATA[External Storage Path : Android > data > %1$s]]></string>
    <string name="create_folder">Create Folder</string>
    <string name="save_image">Save Image</string>
    <string name="external_storage_folder">External Storage</string>
    <string name="internal_download_folder">Internal Download Folder</string>
    <string name="internal_dicm_folder">Internal DICM Folder</string>
    <string name="select_storage_type">Select storage type</string>
    <string name="internal_picture_folder">Internal Picture Folder</string>
    <string name="please_select_path">Please first check folder is created or not</string>
    <string name="surface_camera">Surface Camera</string>
    <string name="camerax">CameraX</string>
    <string name="retry">Retry</string>
    <string name="confirm">Confirm</string>

    <string name="take_aadhaar_front_photo">Take Aadhaar Front Photo</string>
    <string name="take_aadhaar_back_photo">Take Aadhaar Back Photo</string>
    <string name="take_pan_photo">Take Pan Photo</string>
    <string name="confirm_aadhaar_front_photo">Confirm Aadhaar Front Photo</string>
    <string name="confirm_aadhaar_back_photo">Confirm Aadhaar Back Photo</string>
    <string name="confirm_pan_photo">Confirm Pan Photo</string>
    <string name="flash_off">Flash Off</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_auto">Flash Auto</string>
    <string name="torch_off">Torch Off</string>
    <string name="torch_on">Torch On</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="select_picture">Select Picture</string>

</resources>