<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_camera_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_101010b3"
            android:paddingTop="46dp"
            android:paddingBottom="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/capture_image"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/img_back"
                app:layout_constraintRight_toLeftOf="@id/img_option"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/img_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_option"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/li_live_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_101010b3"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/img_gallery"
                android:layout_width="@dimen/dimen_32dp"
                android:layout_height="@dimen/dimen_32dp"
                android:layout_marginLeft="@dimen/dimen_48dp"
                android:layout_marginTop="@dimen/dimen_48dp"
                android:layout_marginBottom="@dimen/dimen_40dp"
                android:src="@drawable/ic_photos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_capture"
                android:layout_width="@dimen/dimen_64dp"
                android:layout_height="@dimen/dimen_64dp"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:layout_marginBottom="@dimen/dimen_24dp"
                android:src="@drawable/ic_capture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_selfie"
                android:layout_width="@dimen/dimen_32dp"
                android:layout_height="@dimen/dimen_32dp"
                android:layout_marginTop="@dimen/dimen_48dp"
                android:layout_marginRight="@dimen/dimen_48dp"
                android:layout_marginBottom="@dimen/dimen_40dp"
                android:src="@drawable/ic_flip_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/li_camera_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_101010b3"
            android:paddingLeft="@dimen/dimen_24dp"
            android:paddingTop="@dimen/dimen_24dp"
            android:paddingRight="@dimen/dimen_24dp"
            android:paddingBottom="@dimen/dimen_48dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="@dimen/dimen_130dp"
                android:layout_height="@dimen/dimen_52dp"
                android:background="@drawable/round_button_click"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_retake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/ic_retake"
                    android:text="@string/retry"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/dimen_130dp"
                android:layout_height="@dimen/dimen_52dp"
                android:background="@drawable/round_button_click"
                android:gravity="center"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/ic_right"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>